# mattybdiscordbot

./: .gitignore  CMakeLists.txt  README.md  index.html
src/: Dockerfile  main.cpp  main.py  requirements.txt  webserver.py
